fixed bug with tables not being 100% wide on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -594,30 +594,6 @@ td,
 th {
   padding: 10px; }
 
-.nav {
-  width: 100%; }
-
-.nav ul {
-  margin: 0;
-  list-style: none; }
-
-.nav li {
-  display: block; }
-
-.nav a {
-  display: block;
-  text-align: center; }
-  @media screen and (min-width: 800px) {
-    .nav a {
-      padding: 40px 0 40px 75px;
-      background-image: url("../images/paw1.png");
-      background-position: left center;
-      background-repeat: no-repeat;
-      text-align: left; } }
-
-.nav a:hover {
-  text-decoration: none; }
-
 .category {
   width: 100%;
   padding: 10px;
@@ -630,12 +606,6 @@ th {
 .category__children {
   margin-top: 20px;
   display: none; }
-
-.items {
-  width: 100%; }
-  @media screen and (max-width: 650px) {
-    .items {
-      display: block; } }
 
 @media screen and (max-width: 650px) {
   .item {
@@ -660,7 +630,7 @@ th {
   .item td {
     width: 100% !important;
     padding: 0;
-    display: block !important;
+    display: block;
     text-align: center; } }
 
 .item img {
@@ -669,10 +639,6 @@ th {
 .player {
   margin-bottom: 20px;
   text-align: center; }
-  @media screen and (max-width: 650px) {
-    .player {
-      width: 100%;
-      display: block; } }
 
 .player th {
   font-weight: bold; }
